- fix layout issues

--- a/public/assets/main.scss
+++ b/public/assets/main.scss
@@ -20,7 +20,7 @@
 .list {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
   row-gap: 0px;
   height: calc(100vh - 210px);
   overflow: auto;
@@ -28,6 +28,9 @@
 
 .list-separator {
   color: #5e5f61;
+  width: 100%;
+  text-align: center;
+  font-size: 1.2rem;
 
   &:before {
     content: '/* ---------------------------- separator ---------------------------- */';
